--- a/API/package.json
+++ b/API/package.json
@@ -30,6 +30,7 @@
     "jest": "^28.1.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "got": "^12.1.0"
   }
 }
